--- a/index.html
+++ b/index.html
@@ -4,7 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
     <title>Something Edited</title>
+    <meta name="title" content="Something Edited" />
+    <meta
+      name="description"
+      content="Something is a bi-annual visual and cultural performative print.
+"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd" />
+    <meta property="og:title" content="Something Edited" />
+    <meta
+      property="og:description"
+      content="Something is a bi-annual visual and cultural performative print.
+"
+    />
+    <meta
+      property="og:image"
+      content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd" />
+    <meta property="twitter:title" content="Something Edited" />
+    <meta
+      property="twitter:description"
+      content="Something is a bi-annual visual and cultural performative print.
+"
+    />
+    <meta
+      property="twitter:image"
+      content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd"
+    />
+
   </head>
   <body>
     <div id="root"></div>
