--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd" />
+    <meta property="og:url" content="https://res.cloudinary.com/dci6ayb3x/image/upload/v1688567932/Something_ljurcc.png" />
     <meta property="og:title" content="Something Edited" />
     <meta
       property="og:description"
@@ -24,12 +24,12 @@
     />
     <meta
       property="og:image"
-      content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd"
+      content="https://res.cloudinary.com/dci6ayb3x/image/upload/v1688567932/Something_ljurcc.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd" />
+    <meta property="twitter:url" content="https://res.cloudinary.com/dci6ayb3x/image/upload/v1688567932/Something_ljurcc.png" />
     <meta property="twitter:title" content="Something Edited" />
     <meta
       property="twitter:description"
@@ -38,7 +38,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://asset.cloudinary.com/dci6ayb3x/0d392770514307bafbdd148e15902ebd"
+      content="https://res.cloudinary.com/dci6ayb3x/image/upload/v1688567932/Something_ljurcc.png"
     />
 
   </head>
